bottom section complete

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,8 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta quo in deserunt ad nobis magnam reiciendis iste, rem omnis qui, suscipit quisquam corrupti! Distinctio mollitia, aspernatur doloremque asperiores natus laborum!
+    <div class="flex-container">
+
+        <div class="flex-child-bts">
+            <button class ="button"> Work with us</button>
+        </div>
+        
+        <div class="flex-child-text">
+            <p class ="item"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, nam vitae? Accusamus cumque dicta, vitae dolores molestias aspernatur officia aperiam nostrum corrupti eum repellat rerum natus quo eveniet excepturi incidunt!</p>
+        </div>
+        
+      </div>
 </body>
 </html>
