--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <div class="flex-container">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+        <link rel="stylesheet" href="styles.css" />
+    </head>
+    <body>
+        <div class="flex-container">
+            <div class="flex-child-bts">
+                <button class="button">Work with us</button>
+            </div>
 
-        <div class="flex-child-bts">
-            <button class ="button"> Work with us</button>
+            <div class="flex-child-text">
+                <p class="item">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Omnis, nam vitae? Accusamus cumque dicta, vitae dolores
+                    molestias aspernatur officia aperiam nostrum corrupti eum
+                    repellat rerum natus quo eveniet excepturi incidunt!
+                </p>
+            </div>
         </div>
-        
-        <div class="flex-child-text">
-            <p class ="item"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, nam vitae? Accusamus cumque dicta, vitae dolores molestias aspernatur officia aperiam nostrum corrupti eum repellat rerum natus quo eveniet excepturi incidunt!</p>
-        </div>
-        
-      </div>
-</body>
+    </body>
 </html>
