style: text hero section

--- a/index.html
+++ b/index.html
@@ -8,19 +8,31 @@
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-        <div class="flex-container">
-            <div class="flex-child-bts">
-                <button class="button">Work with us</button>
+        <main>
+            <div class="hero-intro">
+                <div class="text">
+                    <p>
+                        We <span>Transform</span><br />
+                        Ideas into <br />
+                        Reality
+                    </p>
+                </div>
+                <div class="image"></div>
             </div>
+            <div class="flex-container">
+                <div class="flex-child-bts">
+                    <button class="button">Work with us</button>
+                </div>
 
-            <div class="flex-child-text">
-                <p class="item">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Omnis, nam vitae? Accusamus cumque dicta, vitae dolores
-                    molestias aspernatur officia aperiam nostrum corrupti eum
-                    repellat rerum natus quo eveniet excepturi incidunt!
-                </p>
+                <div class="flex-child-text">
+                    <p class="item">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Omnis, nam vitae? Accusamus cumque dicta, vitae dolores
+                        molestias aspernatur officia aperiam nostrum corrupti
+                        eum repellat rerum natus quo eveniet excepturi incidunt!
+                    </p>
+                </div>
             </div>
-        </div>
+        </main>
     </body>
 </html>
