style: polish the background color and the css units

--- a/index.html
+++ b/index.html
@@ -9,29 +9,34 @@
     </head>
     <body>
         <main>
+            <div class="play">
+                <div class="icon"></div>
+                <div class="message"></div>
+            </div>
             <div class="hero-intro">
                 <div class="text">
                     <p>
                         We <span>Transform</span><br />
-                        Ideas into <br />
+                        Your Ideas into <br />
                         Reality
                     </p>
                 </div>
                 <div class="image"></div>
             </div>
             <div class="flex-container">
-                <div class="flex-child-bts">
-                    <button class="button">Work with us</button>
+                <div class="right">
+                    <div class="flex-child-bts">
+                        <button class="button">Work with us</button>
+                    </div>
+                    <div class="flex-child-text">
+                        <p class="item">
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Omnis, nam vitae? Accusamus cumque dicta,
+                            vitae dolores molestias aspernatur officia aperiam
+                        </p>
+                    </div>
                 </div>
-
-                <div class="flex-child-text">
-                    <p class="item">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Omnis, nam vitae? Accusamus cumque dicta, vitae dolores
-                        molestias aspernatur officia aperiam nostrum corrupti
-                        eum repellat rerum natus quo eveniet excepturi incidunt!
-                    </p>
-                </div>
+                <div class="left"></div>
             </div>
         </main>
     </body>
