style: add svg button and into message

--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
     <body>
         <main>
             <div class="play">
-                <div class="icon"></div>
-                <div class="message"></div>
+                <div class="icon">
+                    <svg aria-hidden="true" role="img" viewBox="0 0 24 24">
+                        <path
+                            fill="currentColor"
+                            d="M19.376 12.416L8.777 19.482A.5.5 0 0 1 8 19.066V4.934a.5.5 0 0 1 .777-.416l10.599 7.066a.5.5 0 0 1 0 .832z"
+                        />
+                    </svg>
+                </div>
+                <div class="message"><h1>Digital Agency Promo</h1></div>
             </div>
             <div class="hero-intro">
                 <div class="text">
