--- a/index.html
+++ b/index.html
@@ -45,6 +45,19 @@
                 </div>
                 <div class="left"></div>
             </div>
+            <div class="down">
+                <div class="arrow">
+                    <svg aria-hidden="true" role="img"  viewBox="0 0 1024 1024">
+                        <path fill="currentColor" d="M104.704 338.752a64 64 0 0 1 90.496 0l316.8 316.8l316.8-316.8a64 64 0 0 1 90.496 90.496L557.248 791.296a64 64 0 0 1-90.496 0L104.704 429.248a64 64 0 0 1 0-90.496z"/>
+                    </svg>
+                </div>
+                <div class="msg">
+                    <p>Discover more</p>
+                </div>
+            </div>
+            
+                
+            </div>
         </main>
     </body>
 </html>
