change header div

--- a/index.html
+++ b/index.html
@@ -9,6 +9,25 @@
     </head>
     <body>
         <main>
+            <div class="header">
+                <div class="icon">
+                    <p>Silicon</p>
+                </div>
+                <div class="links">
+                    <ul>
+                        <li>Services</li>
+                        <li>Services</li>
+                        <li>Services</li>
+                        <li>Services</li>
+                    </ul>
+                </div>
+                <div class="contact">
+                    <button class ="bts">Contact us</button>
+                </div>
+               
+
+                
+            </div>
             <div class="play">
                 <div class="icon">
                     <svg aria-hidden="true" role="img" viewBox="0 0 24 24">
